feat: 枚举参数规范